# sdn-plugin-template

./: .gitignore  CMakeLists.txt  README.md
docs/: index.html
examples/: echo_plugin.c
src/: host_imports.h  plugin.c
src/wasi-stubs/: cxa_stubs.cpp  mutex  setjmp.h  signal.h
